--- a/insertEvent/insertEvent.phtml
+++ b/insertEvent/insertEvent.phtml
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="../css/design.css">
-		<link rel="stylesheet" href="../css/content.css">
-		<link rel="stylesheet" href="../jquery/spectrum.css">
-		<title>セミナー登録画面</title>
-		<script type="text/javascript" src="../jquery/jquery-1.11.3.min.js"></script>
-		<script src="../jquery/spectrum.js"></script>
-		<script src="../script/logout.js"></script>
-		<script src="../script/insertEvent.js"></script>
+	<?php require_once '../html/header.phtml';?>
+
+	<title>セミナー登録画面</title>
 
 	</head>
 	<body>
