--- a/managementElements/managementElements.phtml
+++ b/managementElements/managementElements.phtml
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="../css/design.css">
-		<link rel="stylesheet" href="../css/content.css">
-		<link rel="stylesheet" href="../jquery/spectrum.css">
-		<title>ユーザー設定変更画面</title>
-		<script type="text/javascript" src="../jquery/jquery-1.11.3.min.js"></script>
-		<script type="text/javascript" src="../script/logout.js"></script>
-		<script type="text/javascript" src="../jquery/spectrum.js"></script>
-		<script type="text/javascript" src="../script/managementElements.js"></script>
+
+	<?php require_once '../html/header.phtml';?>
+
+	<title>各種設定一覧</title>
 	</head>
 	<body>
 		<div class="container">
