--- a/overallWorkTime/overallWorkTime.phtml
+++ b/overallWorkTime/overallWorkTime.phtml
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="../css/design.css">
-		<link rel="stylesheet" href="../css/content.css">
-		<script src="../jquery/jquery-1.11.3.min.js"></script>
-		<script src="../script/workTime.js"></script>
-		<script src="../script/overallWorkTime.js"></script>
+	<?php require_once '../html/header.phtml';?>
 
 		<title>勤務時間表(全体)画面</title>
 	</head>
