--- a/eventList/eventList.phtml
+++ b/eventList/eventList.phtml
@@ -7,11 +7,11 @@
 		<link rel="stylesheet" href="../jquery/jquery-ui.css">
 		<link rel="stylesheet" href="../jquery/spectrum.css">
 		<title>ユーザー設定変更画面</title>
-		<script type="text/javascript" src="../jquery/jquery-1.11.3.min.js"></script>
+		<script src="../jquery/jquery-1.11.3.min.js"></script>
 		<script src="../jquery/jquery-ui.js"></script>
 		<script src="../jquery/spectrum.js"></script>
-		<script type="text/javascript" src="../script/logout.js"></script>
-		<script type="text/javascript" src="../script/eventList.js"></script>
+		<script src="../script/logout.js"></script>
+		<script src="../script/eventList.js"></script>
 	</head>
 	<body>
 		<div class="container">
