--- a/settingHoliday/settingHoliday.phtml
+++ b/settingHoliday/settingHoliday.phtml
@@ -3,16 +3,11 @@ $holiday = $model->getHolidayData();
 ?>
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="../css/design.css">
-		<link rel="stylesheet" href="../css/content.css">
-		<link rel="stylesheet" href="../jquery/jquery-ui.css">
-		<script src="../jquery/jquery-1.11.3.min.js"></script>
-		<script src="../jquery/jquery-ui.js"></script>
-		<script src="../script/logout.js"></script>
-		<script src="../script/settingHoliday.js"></script>
+
+	<?php require_once '../html/header.phtml';?>
+
 		<title>休日設定画面</title>
+
 	</head>
 	<body>
 		<div class="container">
