--- a/html/header.phtml
+++ b/html/header.phtml
@@ -72,8 +72,7 @@
 
 		<?php
 		//休日設定画面
-		if($_SERVER['PHP_SELF'] == "/attendanceSystem_html/settingHoliday/settingHoliday.php
-		"){
+		if($_SERVER['PHP_SELF'] == "/attendanceSystem_html/settingHoliday/settingHoliday.php"){
 		?>
 
 			<script src="../script/settingHoliday.js"></script>
