--- a/login/login.phtml
+++ b/login/login.phtml
@@ -3,12 +3,7 @@
 ?>
 <DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="../css/design.css">
-		<link rel="stylesheet" href="../css/content.css">
-		<script src="../jquery/jquery-1.11.3.min.js"></script>
-		<script src="../script/loginForm.js"></script>
+	<?php require_once '../html/header.phtml';?>
 		<title>ログイン画面</title>
 	</head>
 	<body>
