--- a/error/error.phtml
+++ b/error/error.phtml
@@ -49,9 +49,7 @@
 				</div>
 			</div>
 
-			<footer class="box footer">
-				<p>Copyright © 2010-2015 FusionOne Co.,Ltd. All Rights Reserved.</p>
-			</footer>
+			<?php require_once '../html/footer.phtml';?>
 
 		</div>
 	</body>
