--- a/insertUser/insertUser.phtml
+++ b/insertUser/insertUser.phtml
@@ -1,196 +1,145 @@
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="../css/design.css">
-		<link rel="stylesheet" href="../css/content.css">
+	<?php require_once '../html/header.phtml';?>
 		<title>ユーザー登録画面</title>
-		<script type="text/javascript" src="../jquery/jquery-1.11.3.min.js"></script>
-		<script src="../script/logout.js"></script>
-		<script src="../script/insertUser.js"></script>
-
 	</head>
 	<body>
 		<div class="container">
-			<header class="box">
-				<h1 class="title">勤怠管理システム</h1>
-			</header>
 
-			<div class="box width70 clearfix">
-				<div class="userInfo float-left">
-					<p>
-						ユーザー名 : <?php echo $_SESSION['userinfo']['name'];?> /
-						権限 : <?php if($_SESSION['userinfo']['authority'] == 2){?>
-								管理者
-							  <?php }else{?>
-							  	一般ユーザー
-							  <?php }?>
-					</p>
+			<?php require_once '../html/menuArea.phtml';?>
+
+			<?php if($model->getExecute() == "insert"){?>
+
+				<div class="box main-container">
+
+					<div class="insertUser">
+
+						<p>以下の情報でユーザーを登録しました</p>
+
+							<table align="center" id="padding">
+
+								<tr>
+									<td>ID</td>
+									<td><?php echo $model->getUserid();?></td>
+								</tr>
+								<tr>
+									<td>パスワード</td>
+									<td><?php echo $model->getPassword();?></td>
+								<tr>
+								<tr>
+									<td>名前</td>
+									<td><?php echo $model->getName();?></td>
+								<tr>
+								<tr>
+									<td>権限</td>
+									<td>
+										<?php if($model->getAuthority() == 2){?>
+											管理者
+										<?php }else{?>
+											一般ユーザー
+										<?php }?>
+									</td>
+								<tr>
+									<tr>
+									<td>勤務形態</td>
+									<td>
+										<?php if($model->getWorktype() == 1){?>
+											常勤
+										<?php }else{?>
+											非常勤
+										<?php }?>
+									</td>
+								<tr>
+								<tr>
+									<td>表示色</td>
+									<td>
+										<font color="<?php echo $model->getColorInfo("code");?>">
+											<?php echo $model->getColorInfo("c-name");?>
+										</font>
+									</td>
+								</tr>
+							</table>
+							<p>
+							<a href="">ユーザー登録画面に戻る</a>
+							 /
+							<a href="../mainMenu/mainMenu.php">メインメニューに戻る</a>
+							</p>
+						</form>
+
+					</div>
+
 				</div>
-				<div class="userInfo float-right">
-					<p><a href="../login/login.php?execute=logout" id="logoutLink">ログアウト</a></p>
-				</div>
-			</div>
 
-			<div class="box menu"><!-- ヘッダーメニュー-->
-				<ul id="dropmenu">
-	 				<li><a href="../mainMenu/mainMenu.php">メニュー</a>
-	   			 		<ul>
-	    				</ul>
-	 				 </li>
-	  				<li><a href="../overallWorkTime/overallWorkTime.php">勤務時間表</a>
-	   					<ul>
-	   					</ul>
-	 				</li>
-	 				<li><a href="../settingHoliday/settingHoliday.php">休日設定</a>
-	    				<ul>
-	   					</ul>
-	 				</li>
-	  				<li><a href="#">管理設定</a>
-	   					<ul>
-	     					<li><a href="../updateUser/updateUser.php">ユーザー設定変更</a></li>
-	     					<li><a href="./insertUser.php">ユーザー登録</a></li>
-	     					<li><a href="../eventList/eventList.php">セミナー一覧</a></li>
-	     					<li><a href="../insertEvent/insertEvent.php">セミナー登録</a></li>
-	     					<li><a href="../managementElements/managementElements.php">各種設定一覧</a></li>
-	   					</ul>
-	  				</li>
-	  				<li><a href="../settingRestTime/settingRestTime.php">休憩時間設定</a>
-	   					<ul>
-	   					</ul>
-	  				</li>
-				</ul>
-			</div>
+			<?php }else{?>
 
-		<?php if($model->getExecute() == "insert"){?>
-			<div class="box main-container">
-				<div class="insertUser">
-				<p>以下の情報でユーザーを登録しました</p>
+				<div class="box main-container">
+					<div class="insertUser">
+					<p>ユーザー登録</p>
 
-					<table align="center" id="padding">
+					<form action="" method="POST">
 
-						<tr>
-							<td>ID</td>
-							<td><?php echo $model->getUserid();?></td>
-						</tr>
-						<tr>
-							<td>パスワード</td>
-							<td><?php echo $model->getPassword();?></td>
-						<tr>
-						<tr>
-							<td>名前</td>
-							<td><?php echo $model->getName();?></td>
-						<tr>
-						<tr>
-							<td>権限</td>
-							<td>
-								<?php if($model->getAuthority() == 2){?>
-									管理者
-								<?php }else{?>
-									一般ユーザー
-								<?php }?>
-							</td>
-						<tr>
+						<table align="center" id="padding">
+
 							<tr>
-							<td>勤務形態</td>
-							<td>
-								<?php if($model->getWorktype() == 1){?>
-									常勤
-								<?php }else{?>
-									非常勤
-								<?php }?>
-							</td>
-						<tr>
-						<tr>
-							<td>表示色</td>
-							<td>
-								<font color="<?php echo $model->getColorInfo("code");?>">
-									<?php echo $model->getColorInfo("c-name");?>
-								</font>
-							</td>
-						</tr>
-					</table>
-					<p>
-					<a href="">ユーザー登録画面に戻る</a>
-					 /
-					<a href="../mainMenu/mainMenu.php">メインメニューに戻る</a>
-					</p>
-				</form>
+								<td>ID</td>
+								<td><input type="text" name="userid"></td>
+							</tr>
+							<tr>
+								<td>パスワード</td>
+								<td><input type="password" name="password"></td>
+							<tr>
+							<tr>
+								<td>確認用パスワード</td>
+								<td><input type="password" name="checkPass"></td>
+							<tr>
+							<tr>
+								<td>名前</td>
+								<td><input type="text" name="name"></td>
+							<tr>
+							<tr>
+								<td>権限</td>
+								<td>
+									<select name="authority">
+										<option value="2">管理者</option>
+										<option value="1" selected>一般ユーザー</option>
+									</select>
+								</td>
+							<tr>
+							<tr>
+								<td>常勤/非常勤</td>
+								<td>
+									<select name="worktype">
+										<option value="1" selected>常勤</option>
+										<option value="2">非常勤</option>
+									</select>
+								</td>
+							<tr>
+							<tr>
+								<td>表示色</td>
+								<td>
+									<?php
+										foreach($model->getColorList() as $dex =>$col):
+										$count = $dex + 1;
+									?>
+										<input type="radio" name="colorid" value="<?php echo $col["colorid"];?>"><font color="<?php echo $col["code"];?>"><?php echo $col["c-name"];?></font>
+										<?php if($count%4 == 0):?>
+											<br>
+										<?php endif;?>
+
+									<?php endforeach;?>
+								</td>
+							</tr>
+						</table>
+						<p>
+							<input type="submit" id="insert" value="登録">
+							<input type="hidden" name="execute" value="insert">
+						</p>
+					</form>
+				</div>
 			</div>
-		<?php }else{?>
+			<?php }?>
 
-			<div class="box main-container">
-				<div class="insertUser">
-				<p>ユーザー登録</p>
-
-				<form action="" method="POST">
-
-					<table align="center" id="padding">
-
-						<tr>
-							<td>ID</td>
-							<td><input type="text" name="userid"></td>
-						</tr>
-						<tr>
-							<td>パスワード</td>
-							<td><input type="password" name="password"></td>
-						<tr>
-						<tr>
-							<td>確認用パスワード</td>
-							<td><input type="password" name="checkPass"></td>
-						<tr>
-						<tr>
-							<td>名前</td>
-							<td><input type="text" name="name"></td>
-						<tr>
-						<tr>
-							<td>権限</td>
-							<td>
-								<select name="authority">
-									<option value="2">管理者</option>
-									<option value="1" selected>一般ユーザー</option>
-								</select>
-							</td>
-						<tr>
-						<tr>
-							<td>常勤/非常勤</td>
-							<td>
-								<select name="worktype">
-									<option value="1" selected>常勤</option>
-									<option value="2">非常勤</option>
-								</select>
-							</td>
-						<tr>
-						<tr>
-							<td>表示色</td>
-							<td>
-								<?php
-									foreach($model->getColorList() as $dex =>$col):
-									$count = $dex + 1;
-								?>
-									<input type="radio" name="colorid" value="<?php echo $col["colorid"];?>"><font color="<?php echo $col["code"];?>"><?php echo $col["c-name"];?></font>
-									<?php if($count%4 == 0):?>
-										<br>
-									<?php endif;?>
-
-								<?php endforeach;?>
-							</td>
-						</tr>
-					</table>
-					<p>
-						<input type="submit" id="insert" value="登録">
-						<input type="hidden" name="execute" value="insert">
-					</p>
-				</form>
-			</div>
-
-		<?php }?>
-
-
-
-			<footer class="box footer">
-				<p>Copyright © 2010-2015 FusionOne Co.,Ltd. All Rights Reserved.</p>
-			</footer>
+			<?php require_once '../html/footer.phtml';?>
 
 		</div>
 	</body>
