--- a/mainMenu/mainMenu.phtml
+++ b/mainMenu/mainMenu.phtml
@@ -32,9 +32,15 @@
     					<li><a href="#jquery-ui-tabs-3">3ヶ月</a></li>
         				<li><a href="#jquery-ui-tabs-2">2ヶ月</a></li>
         				<li><a href="#jquery-ui-tabs-1">1ヶ月</a></li>
-        				<input type="checkbox" name="work" value="1" id="worksheet" checked="checked">勤務表
-						<input type="checkbox" name="seminar" id="seminar" value="2">セミナー
-						<input type="checkbox" name="absence" id="absence" value="3">欠席者
+        				<label>
+        					<input type="checkbox" name="work" value="1" id="worksheet" checked="checked">勤務表
+        				</label>
+        				<label>
+							<input type="checkbox" name="seminar" id="seminar" value="2">セミナー
+						</label>
+						<label>
+							<input type="checkbox" name="absence" id="absence" value="3">欠席者
+						</label>
 						&nbsp;
 
         				<form action="" method="POST" style="display:inline;">
