--- a/overallWorkTime/overallWorkTime.phtml
+++ b/overallWorkTime/overallWorkTime.phtml
@@ -212,17 +212,16 @@
 
 						<form action="./overallWorkTime.php" method="POST">
 							<p class="right">
+								<input type="submit" name="execute" value="Excelに出力"/>
+								　　
+								<input type="submit" name="execute" value="PDFに出力"/>
+
 								<input type="hidden" name="accountid" value="<?=$model->getAccountId();?>">
 								<input type="hidden" name="work" value="<?=$model->getWork();?>">
 								<input type="hidden" name="year" value="<?=$model->getYear();?>">
 								<input type="hidden" name="month" value="<?=$model->getMonth();?>">
 								<input type="hidden" name="startDay" value="<?=$model->getStartDay();?>">
 								<input type="hidden" name="endDay" value="<?=$model->getEndDay();?>">
-
-								<button id="exportExcel">Excelに出力</button>
-								　　
-								<button name="execute" value="PDFに出力" class="exportPDF">
-								<input type="hidden" name="execute" value="excel">
 							</p>
 
 						</form>
