--- a/settingHoliday/settingHoliday.phtml
+++ b/settingHoliday/settingHoliday.phtml
@@ -23,12 +23,13 @@ $holiday = $model->getHolidayData();
 							<dd>
 								<p>
 									<form action="settingHoliday.php" method="POST">
-										日付選択 ： <input type="date" name="holiday" value="<?=date('Y-m-d')?>">　
+										日付選択 ： <input type="date" name="holiday" value="<?=date('Y-m-d')?>"
+														 placeholder="例)2014-06-11">　
 										種別  : <select name="type">
 												<option value="1">公休</option>
 												<option value="2">祝日</option>
 											  </select>　
-										祝日名 : <input type="text" name="holidayName" maxlength="10">
+										祝日名 : <input type="text" name="holidayName" maxlength="10" placeholder="10文字以内で記入">
 										<input type="submit" value="登録" id="setSingle">
 										<input type="hidden" name="execute" value="single">
 									</form>
