PDF出力処理の作成
勤務時間表（個人）　作成終了
メインメニュー　作成中

--- a/mainMenu/mainMenu.phtml
+++ b/mainMenu/mainMenu.phtml
@@ -511,8 +511,8 @@
 				</div><!-- jquery-ui-tabs -->
 				<div align="center">
 					<form action = "./mainMenu.php" method="POST">
-						<input type="submit" value="Excelに出力"></button>
-						<input type="hidden" name="execute" value="excel">
+						<input type="submit" name="execute" value="Excelに出力">
+						<input type="submit" name="execute" value="PDFに出力">
 					</form>
 				</div>
 
