--- a/personalWorkTime/personalWorkTime.phtml
+++ b/personalWorkTime/personalWorkTime.phtml
@@ -139,7 +139,7 @@ $sum = $model->getSum();
 							</tr>
 							<tr class="record">
 								<th>合計勤務時間</th>
-								<th><?=round($sum[$v]['sumWorkTime'],2)?></th>
+								<th><?=$sum[$v]['sumWorkTime']?></th>
 							</tr>
 						</table>
 
