【追加】mainMenu.phtmlに動的にカレンダーの出力を引き継ぐ処理を追加(40%)
mainMenu.phtml

メインメニュー部分に画面上で選択された処理を引き継ぐ処理を追加。
hiddenでの値渡しでデータを引き継ぐようにする。

またチェックボックスでの画面の切り替えと、タブ選択での表示月数の切り替えは
Jqueryで取得して送信する予定。

--- a/mainMenu/mainMenu.phtml
+++ b/mainMenu/mainMenu.phtml
@@ -507,6 +507,13 @@
 					<form action = "./mainMenu.php" method="POST">
 						<input type="submit" name="execute" value="Excelに出力">
 						<input type="submit" name="execute" value="PDFに出力">
+						<input type="hidden" name="year" value="<?php echo $model->getSelYear(0);?>">
+						<input type="hidden" name="month" value="<?php echo $model->getSelMonth(0);?>">
+						<input type="hidden" name="disp">
+						<input type="hidden" name="work">
+						<input type="hidden" name="absence">
+						<input type="hidden" name="seminar">
+
 					</form>
 				</div>
 
