PDF出力処理追加＋勤務管理表(個人)機能修正
PDF出力
・指定した期間分の勤務予定カレンダーを表示

勤務管理表(個人)機能
・休憩時間と実働時間の表示を修正

--- a/mainMenu/mainMenu.phtml
+++ b/mainMenu/mainMenu.phtml
@@ -509,7 +509,7 @@
 						<input type="submit" name="execute" value="PDFに出力">
 						<input type="hidden" name="year" value="<?php echo $model->getSelYear(0);?>">
 						<input type="hidden" name="month" value="<?php echo $model->getSelMonth(0);?>">
-						<input type="hidden" name="disp" id="displayMonth" value="0">
+						<input type="hidden" name="disp" id="displayMonth" value="">
 						<input type="hidden" name="work" value="true">
 						<input type="hidden" name="absence" value="false">
 						<input type="hidden" name="seminar" value="false">
