--- a/settingRestTime/settingRestTime.phtml
+++ b/settingRestTime/settingRestTime.phtml
@@ -784,9 +784,7 @@ $data = $model->getRestTimeData();
 				</form>
 			</div>
 
-			<footer class="box footer">
-				<p>Copyright © 2010-<?=date("Y")?> FusionOne Co.,Ltd. All Rights Reserved.</p>
-			</footer>
+			<?php require_once '../html/footer.phtml';?>
 
 		</div>
 	</body>
